# Personal-News

./: .gitignore  README.md  prefect.yaml  pyproject.toml  requirements.txt
app/: .gitignore  api.py  database.py  dede.py  info_data.db  main.py  models.py  test_db.py
