[project]
name = "news-summary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "prefect>=3.1.12",
    "requests>=2.32.3",
    "ruff>=0.9.1",
    "selenium>=4.27.1",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",  # PostgreSQL adapter
    "prefect-sqlalchemy>=0.3.0",  # For database credentials block
]
